; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_effect.c_d3dx9_base_effect_set_float.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_effect.c_d3dx9_base_effect_set_float.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d3dx9_base_effect = type { i32 }
%struct.d3dx_parameter = type { i32, i32, i64, i32, i32 }

@D3DXPT_FLOAT = common dso_local global i32 0, align 4
@D3D_OK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"Parameter not found.\0A\00", align 1
@D3DERR_INVALIDCALL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.d3dx9_base_effect*, i32, float)* @d3dx9_base_effect_set_float to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @d3dx9_base_effect_set_float(%struct.d3dx9_base_effect* %0, i32 %1, float %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.d3dx9_base_effect*, align 8
  %6 = alloca i32, align 4
  %7 = alloca float, align 4
  %8 = alloca %struct.d3dx_parameter*, align 8
  %9 = alloca i64, align 8
  store %struct.d3dx9_base_effect* %0, %struct.d3dx9_base_effect** %5, align 8
  store i32 %1, i32* %6, align 4
  store float %2, float* %7, align 4
  %10 = load %struct.d3dx9_base_effect*, %struct.d3dx9_base_effect** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call %struct.d3dx_parameter* @get_valid_parameter(%struct.d3dx9_base_effect* %10, i32 %11)
  store %struct.d3dx_parameter* %12, %struct.d3dx_parameter** %8, align 8
  %13 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %8, align 8
  %14 = icmp ne %struct.d3dx_parameter* %13, null
  br i1 %14, label %15, label %53

15:                                               ; preds = %3
  %16 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %8, align 8
  %17 = getelementptr inbounds %struct.d3dx_parameter, %struct.d3dx_parameter* %16, i32 0, i32 4
  %18 = load i32, i32* %17, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %53, label %20

20:                                               ; preds = %15
  %21 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %8, align 8
  %22 = getelementptr inbounds %struct.d3dx_parameter, %struct.d3dx_parameter* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = icmp eq i32 %23, 1
  br i1 %24, label %25, label %53

25:                                               ; preds = %20
  %26 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %8, align 8
  %27 = getelementptr inbounds %struct.d3dx_parameter, %struct.d3dx_parameter* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = icmp eq i32 %28, 1
  br i1 %29, label %30, label %53

30:                                               ; preds = %25
  %31 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %8, align 8
  %32 = getelementptr inbounds %struct.d3dx_parameter, %struct.d3dx_parameter* %31, i32 0, i32 3
  %33 = load i32, i32* %32, align 8
  %34 = load i32, i32* @D3DXPT_FLOAT, align 4
  %35 = call i32 @set_number(i64* %9, i32 %33, float* %7, i32 %34)
  %36 = load i64, i64* %9, align 8
  %37 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %8, align 8
  %38 = getelementptr inbounds %struct.d3dx_parameter, %struct.d3dx_parameter* %37, i32 0, i32 2
  %39 = load i64, i64* %38, align 8
  %40 = inttoptr i64 %39 to i64*
  %41 = load i64, i64* %40, align 8
  %42 = icmp ne i64 %36, %41
  br i1 %42, label %43, label %46

43:                                               ; preds = %30
  %44 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %8, align 8
  %45 = call i32 @set_dirty(%struct.d3dx_parameter* %44)
  br label %46

46:                                               ; preds = %43, %30
  %47 = load i64, i64* %9, align 8
  %48 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %8, align 8
  %49 = getelementptr inbounds %struct.d3dx_parameter, %struct.d3dx_parameter* %48, i32 0, i32 2
  %50 = load i64, i64* %49, align 8
  %51 = inttoptr i64 %50 to i64*
  store i64 %47, i64* %51, align 8
  %52 = load i32, i32* @D3D_OK, align 4
  store i32 %52, i32* %4, align 4
  br label %56

53:                                               ; preds = %25, %20, %15, %3
  %54 = call i32 @WARN(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %55 = load i32, i32* @D3DERR_INVALIDCALL, align 4
  store i32 %55, i32* %4, align 4
  br label %56

56:                                               ; preds = %53, %46
  %57 = load i32, i32* %4, align 4
  ret i32 %57
}

declare dso_local %struct.d3dx_parameter* @get_valid_parameter(%struct.d3dx9_base_effect*, i32) #1

declare dso_local i32 @set_number(i64*, i32, float*, i32) #1

declare dso_local i32 @set_dirty(%struct.d3dx_parameter*) #1

declare dso_local i32 @WARN(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
